--- a/404.html
+++ b/404.html
@@ -11,9 +11,9 @@
       type="image/x-icon"
       href="https://user-images.githubusercontent.com/9554297/83762004-a0761b00-a6a9-11ea-83b4-9c8ff721d4b8.png"
     />
-    <link rel="stylesheet" href="/umi.css" />
+    <link rel="stylesheet" href="/note/umi.css" />
     <script>
-      window.routerBase = "/";
+      window.routerBase = "/note";
     </script>
     <script>
       //! umi version: 3.5.24
@@ -33,6 +33,6 @@
   <body>
     <div id="root"></div>
 
-    <script src="/umi.js"></script>
+    <script src="/note/umi.js"></script>
   </body>
 </html>
