--- a/404.html
+++ b/404.html
@@ -11,6 +11,10 @@
       type="image/x-icon"
       href="https://user-images.githubusercontent.com/9554297/83762004-a0761b00-a6a9-11ea-83b4-9c8ff721d4b8.png"
     />
+    <link
+      href="https://cdn.jsdelivr.net/npm/docsearch.js@2/dist/cdn/docsearch.min.css"
+      rel="stylesheet"
+    />
     <style>
       img[alt="img"] {
         box-shadow: 0px 0px 16px #e2e2e2;
@@ -40,6 +44,7 @@
   <body>
     <div id="root"></div>
 
-    <script src="/note/umi.52ec469e.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/docsearch.js@2/dist/cdn/docsearch.min.js"></script>
+    <script src="/note/umi.26c0cf77.js"></script>
   </body>
 </html>
