--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
         margin-top: 16px;
       }
     </style>
-    <link rel="stylesheet" href="/note/umi.e8e79e1b.css" />
+    <link rel="stylesheet" href="/umi.e8e79e1b.css" />
     <script>
-      window.routerBase = "/note";
+      window.routerBase = "/";
     </script>
     <script>
       //! umi version: 3.5.24
@@ -45,6 +45,6 @@
     <div id="root"></div>
 
     <script src="https://cdn.jsdelivr.net/npm/docsearch.js@2/dist/cdn/docsearch.min.js"></script>
-    <script src="/note/umi.26c0cf77.js"></script>
+    <script src="/umi.2d7d7333.js"></script>
   </body>
 </html>
