--- a/404.html
+++ b/404.html
@@ -11,10 +11,6 @@
       type="image/x-icon"
       href="https://user-images.githubusercontent.com/9554297/83762004-a0761b00-a6a9-11ea-83b4-9c8ff721d4b8.png"
     />
-    <link
-      href="https://cdn.jsdelivr.net/npm/docsearch.js@2/dist/cdn/docsearch.min.css"
-      rel="stylesheet"
-    />
     <style>
       img[alt="img"] {
         box-shadow: 0px 0px 16px #e2e2e2;
@@ -22,9 +18,9 @@
         margin-top: 16px;
       }
     </style>
-    <link rel="stylesheet" href="/umi.e8e79e1b.css" />
+    <link rel="stylesheet" href="/note/umi.e8e79e1b.css" />
     <script>
-      window.routerBase = "/";
+      window.routerBase = "/note";
     </script>
     <script>
       //! umi version: 3.5.24
@@ -44,7 +40,6 @@
   <body>
     <div id="root"></div>
 
-    <script src="https://cdn.jsdelivr.net/npm/docsearch.js@2/dist/cdn/docsearch.min.js"></script>
-    <script src="/umi.2d7d7333.js"></script>
+    <script src="/note/umi.b7ce212b.js"></script>
   </body>
 </html>
